SubVersion: $Id$

To do: 
	- USB pass-thru support
	- bug with API mode (Linux & Windows): may not work with some calcs ?!

Checking: valgrind & splint
	
Log:

- 29/07/2005, version 3.9.5: roms
	Added ticable_link_reset function (needed by TiEmu for proper operation and present
	in ticables2).

- 22/07/2005: jb
	configure.ac: Generic fallback case for all Linux hosts.

- 20/07/2005, version 3.9.4: roms
	Fixed new gcc4.0 warnings.
	
- 12/07/2005, version 3.9.3: roms
	"Low-level access cable functions may be set to NULL on some cables: set to nul_cable instead."
		Done for the Gray Link !

- 25/05/2005, version 3.9.2: roms
	Removed AVRlink support (avoid clashing on exported baud_rate symbol).

- 15/05/2005, version 3.9.1: roms
	Fixed get_attributes for random permissions (backport of ticables2).

- 27/04/2005, version 3.9.0: roms
	Low-level access cable functions may be set to NULL on some cables: set to nul_cable instead.
	Merged Christian "Christian Walther" <cwalther@gmx.ch> patches for Mac OS-X.

- 05/03/2005, version 3.8.9: roms
	Added gcc 4.0 -fvisibility flag support.
	Fixed getting of current handle in VTi link support with MinGW.
	Fixed bug: no support of LINK_VTL under Linux (bad method).
	
- 09/02/2005, version 3.8.8: roms
	Some clean-up and fixes in the virtual link cables.
	Removed windows.h dependancy in timeout.h.
	Fixed some MinGw compilation issues.

- 25/09/2004, version 3.8.7: roms
	Added USB direct cable support (kernel module).
	Added USB direct cable support (lib-usb).
	
- 11/06/2004, version 3.8.6: jb
	Added support for x86-64 (configure.ac, configure).

- 22/05/2004, version 3.8.6: roms
	Bug fixes from JB: buffer overflow in linux_detect.c, NULL functions
	with direct link support.
	
- 05/05/2004, version 3.8.5: roms
	Bug fix in the verbose.c compatibility support (DISPLAY).
	Merged Tijl's patch: does not build or use libusb support if libusb
	not detected.
	link_dfl changed into link_nul (null cable). Added null method and null